# senor-bot

./: .env  .gitignore  Procfile  README.md  phrases.txt  pyproject.toml  settings.toml
scripts/: create_test_data.py  stats_functions.py  test  test_db.py  test_openai.py  text_to_image.py
senor_bot/: bot.py  checks.py  config.py  db.py
senor_bot/cogs/: misc.py  questions.py  stats.py
tests/: test_questions.py
