[tool.poetry]
name = "senor-bot"
version = "0.1.0"
description = ""
authors = ["Br0k3nDesign <adam.j.moran@gmail.com>"]
readme = "README.md"
packages = [{ include = "senor_bot" }]

[tool.poetry.dependencies]
python = "3.11.6"
dynaconf = "^3.2.3"
openai = "^0.28.1"
polars = "^0.19.7"
sqlalchemy = "^2.0.21"
aiosqlite = "^0.19.0"
py-cord = "^2.4.1"
python-box = "^7.1.1"
icecream = "^2.1.3"
pillow = "^10.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
isort = "^5.12.0"
pytest-html = "^4.0.2"
pytest-sugar = "^0.9.7"
pytest-icdiff = "^0.8"
datasets = "^2.14.5"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-parametrize-suite = "^23.1.2"
ipykernel = "^6.25.2"
faker = "^19.10.0"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
